--- a/packages/mobile/package.json
+++ b/packages/mobile/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
+    "patch-js": "node bin/patch.js",
     "build-css": "create-tailwind-rn tailwind.css src/stylesheets/tailwind.json",
     "export-stacks-access-as-string": "node bin/export-stacks-access-as-string.js ../../../stacks-access-in-webview .",
     "export-ckeditor-as-string": "node bin/export-ckeditor-as-string.js ../../../justnote-editor-in-webview/core-js/minified.js ../../../justnote-editor-in-webview/js/ckeditor.js ../../../justnote-editor-in-webview/css/tailwind.css ../../../justnote-editor-in-webview/css/ckeditor.css ../../../justnote-editor-in-webview/index.html ./ckeditor.js",
@@ -42,6 +43,7 @@
     "@babel/core": "^7.12.9",
     "@babel/runtime": "^7.12.5",
     "@react-native-community/eslint-config": "^2.0.0",
+    "@types/react-native": "^0.70.5",
     "@welldone-software/why-did-you-render": "^7.0.1",
     "babel-jest": "^26.6.3",
     "babel-plugin-inline-import": "^3.0.0",
