--- a/packages/mobile/package.json
+++ b/packages/mobile/package.json
@@ -51,7 +51,7 @@
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "0.72.3",
     "react-test-renderer": "18.1.0",
-    "typescript": "4.0.8"
+    "typescript": "^4.8.4"
   },
   "jest": {
     "preset": "react-native"
