--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "patch-js": "node bin/patch.js",
+    "export-jhfp-as-string": "node bin/export-jhfp-as-string.js ../../../justnote-html-for-pdf/css/tailwind.css ../../../justnote-html-for-pdf/css/ckeditor.css ../../../justnote-html-for-pdf/index.html ./src/jhfp.js",
     "start": "HTTPS=true BROWSER=none react-app-rewired start",
     "build-js": "react-app-rewired build",
     "copy-hard-coding": "bash bin/copy-hard-coding.sh",
