--- a/packages/mobile/package.json
+++ b/packages/mobile/package.json
@@ -25,6 +25,7 @@
     "react-native-animated-spinkit": "^1.5.2",
     "react-native-blockstack": "https://gitpkg.now.sh/stxapps/blockstack-react-native/BlockstackSDK?75854753bb20b72c0da94e16bb4b5e56a385578f",
     "react-native-device-time-format": "https://github.com/stxapps/react-native-device-time-format#63f4a9158a91c391d67317a489ccfe8ec28a7c84",
+    "react-native-document-picker": "^9.0.1",
     "react-native-fast-image": "^8.6.1",
     "react-native-file-access": "^2.5.0",
     "react-native-html-to-pdf": "https://github.com/stxapps/react-native-html-to-pdf#77aed8df9caa3b48f7cf19933bc6d6576fe817ce",
@@ -32,8 +33,10 @@
     "react-native-keyboard-manager": "^6.5.4-4",
     "react-native-mmkv-storage": "0.4.4",
     "react-native-safe-area-context": "^4.4.1",
+    "react-native-share": "^8.2.2",
     "react-native-svg": "^13.4.0",
     "react-native-webview": "^11.23.1",
+    "react-native-zip-archive": "^6.0.9",
     "react-redux": "^8.0.4",
     "redux": "^4.2.0",
     "redux-loop": "^6.2.0",
