--- a/packages/mobile/package.json
+++ b/packages/mobile/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@wewatch/lexorank": "^1.0.3",
     "axios": "0.27.2",
+    "htmlparser2": "^9.0.0",
     "react": "18.1.0",
     "react-native": "0.70.3",
     "react-native-animated-spinkit": "^1.5.2",
