--- a/packages/mobile/package.json
+++ b/packages/mobile/package.json
@@ -27,21 +27,21 @@
     "react-native-blockstack": "https://gitpkg.now.sh/stxapps/blockstack-react-native/BlockstackSDK?509b207c1f9090e07faefe4bbbc7b130672654e6",
     "react-native-device-time-format": "https://github.com/stxapps/react-native-device-time-format#63f4a9158a91c391d67317a489ccfe8ec28a7c84",
     "react-native-document-picker": "^9.0.1",
-    "react-native-fast-image": "^8.6.1",
-    "react-native-file-access": "^2.5.0",
+    "react-native-fast-image": "^8.6.3",
+    "react-native-file-access": "^3.0.4",
     "react-native-html-to-pdf": "https://github.com/stxapps/react-native-html-to-pdf#77aed8df9caa3b48f7cf19933bc6d6576fe817ce",
-    "react-native-iap": "8.2.1",
-    "react-native-keyboard-manager": "^6.5.4-4",
+    "react-native-iap": "^12.10.5",
+    "react-native-keyboard-manager": "^6.5.11-2",
     "react-native-mmkv-storage": "0.4.4",
-    "react-native-safe-area-context": "^4.4.1",
-    "react-native-share": "^8.2.2",
-    "react-native-svg": "^13.4.0",
-    "react-native-webview": "^11.23.1",
+    "react-native-safe-area-context": "^4.6.3",
+    "react-native-share": "^9.1.0",
+    "react-native-svg": "^13.9.0",
+    "react-native-webview": "^13.2.2",
     "react-native-zip-archive": "^6.0.9",
-    "react-redux": "^8.0.4",
-    "redux": "^4.2.0",
+    "react-redux": "^8.1.1",
+    "redux": "^4.2.1",
     "redux-loop": "^6.2.0",
-    "reselect": "^4.1.6",
+    "reselect": "^4.1.8",
     "tailwind-rn": "https://github.com/stxapps/tailwind-rn#96848a8d2c2370e4f5e57a773ace172c4073157d",
     "url-parse": "^1.5.10"
   },
@@ -59,7 +59,7 @@
     "react-native-flipper": "0.164.0",
     "react-test-renderer": "18.1.0",
     "redux-flipper": "^2.0.2",
-    "typescript": "^4.8.4"
+    "typescript": "^5.1.6"
   },
   "jest": {
     "preset": "react-native"
