--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -46,8 +46,10 @@
     "file-saver": "^2.0.5",
     "framer-motion": "^10.12.17",
     "idb-keyval": "^6.2.1",
+    "jest-diff": "^29.7.0",
     "postcss": "^8.4.31",
     "process": "^0.11.10",
+    "queue": "^7.0.0",
     "react": "^18.2.0",
     "react-app-rewired": "^2.2.1",
     "react-dom": "^18.2.0",
