--- a/packages/mobile/package.json
+++ b/packages/mobile/package.json
@@ -21,6 +21,8 @@
     "@wewatch/lexorank": "^1.0.3",
     "axios": "0.27.2",
     "htmlparser2": "^9.0.0",
+    "jest-diff": "^29.7.0",
+    "queue": "^7.0.0",
     "react": "18.1.0",
     "react-native": "0.70.3",
     "react-native-animated-spinkit": "^1.5.2",
@@ -50,7 +52,7 @@
     "@babel/core": "^7.12.9",
     "@babel/runtime": "^7.12.5",
     "@react-native-community/eslint-config": "^2.0.0",
-    "@types/react-native": "^0.70.5",
+    "@types/react-native": "0.70.3",
     "@welldone-software/why-did-you-render": "^7.0.1",
     "babel-jest": "^26.6.3",
     "babel-plugin-inline-import": "^3.0.0",
