--- a/packages/web/public/manifest.json
+++ b/packages/web/public/manifest.json
@@ -1,7 +1,24 @@
 {
   "short_name": "Justnote",
-  "name": "Justnote.cc",
+  "name": "Justnote",
   "icons": [
+    {
+      "src": "logo512-maskable.png",
+      "type": "image/png",
+      "sizes": "512x512",
+      "purpose": "maskable"
+    },
+    {
+      "src": "logo192-maskable.png",
+      "type": "image/png",
+      "sizes": "192x192",
+      "purpose": "maskable"
+    },
+    {
+      "src": "logo512.png",
+      "type": "image/png",
+      "sizes": "512x512"
+    },
     {
       "src": "logo192.png",
       "type": "image/png",
@@ -11,11 +28,6 @@
       "src": "logo64.png",
       "sizes": "64x64",
       "type": "image/png"
-    },
-    {
-      "src": "logo512.png",
-      "type": "image/png",
-      "sizes": "512x512"
     },
     {
       "src": "logo32.png",
@@ -31,5 +43,79 @@
   "start_url": ".",
   "display": "standalone",
   "theme_color": "#ffffff",
-  "background_color": "#ffffff"
+  "background_color": "#ffffff",
+  "screenshots": [
+    {
+      "src": "ss-mobile-1.png",
+      "type": "image/png",
+      "sizes": "1242x2688",
+      "form_factor": "narrow"
+    },
+    {
+      "src": "ss-mobile-3.png",
+      "type": "image/png",
+      "sizes": "1242x2688",
+      "form_factor": "narrow"
+    },
+    {
+      "src": "ss-mobile-4.png",
+      "type": "image/png",
+      "sizes": "1242x2688",
+      "form_factor": "narrow"
+    },
+    {
+      "src": "ss-mobile-5.png",
+      "type": "image/png",
+      "sizes": "1242x2688",
+      "form_factor": "narrow"
+    },
+    {
+      "src": "ss-mobile-6.png",
+      "type": "image/png",
+      "sizes": "1242x2688",
+      "form_factor": "narrow"
+    },
+    {
+      "src": "ss-wide-1.png",
+      "type": "image/png",
+      "sizes": "2732x2048",
+      "form_factor": "wide"
+    },
+    {
+      "src": "ss-wide-2.png",
+      "type": "image/png",
+      "sizes": "2732x2048",
+      "form_factor": "wide"
+    },
+    {
+      "src": "ss-wide-3.png",
+      "type": "image/png",
+      "sizes": "2732x2048",
+      "form_factor": "wide"
+    },
+    {
+      "src": "ss-wide-4.png",
+      "type": "image/png",
+      "sizes": "2732x2048",
+      "form_factor": "wide"
+    },
+    {
+      "src": "ss-wide-5.png",
+      "type": "image/png",
+      "sizes": "2732x2048",
+      "form_factor": "wide"
+    },
+    {
+      "src": "ss-wide-6.png",
+      "type": "image/png",
+      "sizes": "2732x2048",
+      "form_factor": "wide"
+    },
+    {
+      "src": "ss-wide-7.png",
+      "type": "image/png",
+      "sizes": "2732x2048",
+      "form_factor": "wide"
+    }
+  ]
 }
