--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -17,11 +17,11 @@
   "dependencies": {
     "@ckeditor/ckeditor5-build-decoupled-document": "file:../../../ckeditor5/packages/ckeditor5-build-decoupled-document",
     "@ckeditor/ckeditor5-react": "^6.2.0",
-    "@stacks/auth": "2.0.1",
-    "@stacks/connect": "6.4.2",
-    "@stacks/encryption": "2.0.1",
-    "@stacks/storage": "2.0.1",
-    "@stacks/wallet-sdk": "2.0.1",
+    "@stacks/auth": "^6.16.1",
+    "@stacks/connect": "^7.7.1",
+    "@stacks/encryption": "^6.16.1",
+    "@stacks/storage": "^6.16.1",
+    "@stacks/wallet-sdk": "^6.16.1",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/line-clamp": "^0.4.4",
