--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -9,9 +9,10 @@
     "build-js": "react-app-rewired build",
     "copy-hard-coding": "bash bin/copy-hard-coding.sh",
     "build": "yarn run patch-js && yarn run build-js && yarn run copy-hard-coding",
+    "analyze": "source-map-explorer 'build/static/js/*.js'",
     "test": "react-app-rewired test",
-    "deploy-test": "aws s3 sync build/static s3://test-justnote-web/static --size-only --delete --acl public-read --cache-control max-age=31536000 --profile justnote && aws s3 sync build s3://test-justnote-web --exclude static/* --size-only --delete --acl public-read --profile justnote && aws s3 cp build/.well-known/apple-app-site-association s3://test-justnote-web/.well-known/apple-app-site-association --acl public-read --content-type application/json --profile justnote && aws s3 cp build/service-worker.js s3://test-justnote-web/service-worker.js --acl public-read --cache-control no-cache --profile justnote && aws s3 cp build/index.html s3://test-justnote-web/index.html --acl public-read --cache-control no-cache --profile justnote && aws cloudfront create-invalidation --distribution-id E16T92AA3CQF3P --paths /index.html /.well-known/* --profile justnote",
-    "deploy-prod": "aws s3 sync build/static s3://justnote-web/static --size-only --delete --acl public-read --cache-control max-age=31536000 --profile justnote && aws s3 sync build s3://justnote-web --exclude static/* --size-only --delete --acl public-read --profile justnote && aws s3 cp build/.well-known/apple-app-site-association s3://justnote-web/.well-known/apple-app-site-association --acl public-read --content-type application/json --profile justnote && aws s3 cp build/service-worker.js s3://justnote-web/service-worker.js --acl public-read --cache-control no-cache --profile justnote && aws s3 cp build/index.html s3://justnote-web/index.html --acl public-read --cache-control no-cache --profile justnote && aws cloudfront create-invalidation --distribution-id E1G6UHDXNDOUN --paths /index.html /.well-known/* --profile justnote",
+    "deploy-test": "bash bin/deploy-test.sh",
+    "deploy-prod": "bash bin/deploy-prod.sh",
     "eject": "react-scripts eject"
   },
   "dependencies": {
@@ -45,7 +46,7 @@
     "buffer": "^6.0.3",
     "crypto-browserify": "^3.12.0",
     "file-saver": "^2.0.5",
-    "framer-motion": "^10.12.17",
+    "framer-motion": "^11.3.30",
     "idb-keyval": "^6.2.1",
     "jest-diff": "^29.7.0",
     "postcss": "^8.4.31",
@@ -59,6 +60,7 @@
     "redux": "^4.2.1",
     "redux-loop": "^6.2.0",
     "reselect": "^4.1.8",
+    "source-map-explorer": "^2.5.3",
     "stream-browserify": "^3.0.0",
     "tailwindcss": "^3.3.2",
     "tailwindcss-labeled-groups": "^0.0.2",
