--- a/packages/mobile/package.json
+++ b/packages/mobile/package.json
@@ -43,6 +43,7 @@
     "react-native-safe-area-context": "^4.6.3",
     "react-native-share": "^9.1.0",
     "react-native-svg": "^13.9.0",
+    "react-native-system-navigation-bar": "^2.6.4",
     "react-native-webview": "^13.10.5",
     "react-native-zip-archive": "^6.1.0",
     "react-redux": "^8.1.1",
