--- a/packages/mobile/jsconfig.json
+++ b/packages/mobile/jsconfig.json
@@ -1,13 +1,11 @@
 {
   "extends": "@react-native/typescript-config/tsconfig.json",
+  "exclude": ["ios"],
   "compilerOptions": {
-    "allowJs": true,
     "checkJs": true,
-    "target": "es2021",
-    "allowSyntheticDefaultImports": true,
-    "moduleResolution": "node",
-    "noEmit": true,
-    "jsx": "react",
+    "noImplicitAny": false,
+    "strictNullChecks": false,
+    "useUnknownInCatchVariables": false,
     "typeRoots": ["./src/@types", "./node_modules/@types"]
   }
 }
