--- a/packages/mobile/package.json
+++ b/packages/mobile/package.json
@@ -70,7 +70,7 @@
     "prettier": "2.8.8",
     "react-native-svg-transformer": "^1.5.0",
     "react-test-renderer": "18.3.1",
-    "typescript": "5.0.4"
+    "typescript": "^5.5.4"
   },
   "engines": {
     "node": ">=18"
