--- a/packages/mobile/android/gradle.properties
+++ b/packages/mobile/android/gradle.properties
@@ -44,5 +44,6 @@ JUSTNOTE_UPLOAD_STORE_PASSWORD=<keystore-password>
 JUSTNOTE_UPLOAD_KEY_PASSWORD=<keystore-alias-password>
 
 org.gradle.daemon=true
-org.gradle.configureondemand=true
+# might make the release build skip bundling JS (reactnative.dev/docs/signed-apk-android)
+#org.gradle.configureondemand=true
 org.gradle.jvmargs=-Xmx4g -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
