--- a/packages/expo/package.json
+++ b/packages/expo/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "scripts": {
     "patch-js": "node bin/patch.js",
-    "prebuild": "npx expo prebuild",
+    "prebuild": "npx expo prebuild --clean",
     "android": "npx expo run:android",
     "ios": "npx expo run:ios",
     "start": "npx expo start",
@@ -19,28 +19,28 @@
     "@react-navigation/native": "^7.1.6",
     "@wewatch/lexorank": "^1.0.3",
     "event-target-fallback": "^1.0.0",
-    "expo": "53.0.15",
-    "expo-dev-client": "~5.2.2",
+    "expo": "53.0.17",
+    "expo-dev-client": "~5.2.4",
     "expo-document-picker": "~13.1.6",
     "expo-font": "~13.3.1",
     "expo-iap": "^2.4.4",
     "expo-image-manipulator": "~13.1.7",
-    "expo-linking": "~7.1.6",
+    "expo-linking": "~7.1.7",
     "expo-localization": "~16.1.6",
-    "expo-navigation-bar": "~4.2.6",
+    "expo-navigation-bar": "~4.2.7",
     "expo-print": "~14.1.4",
-    "expo-router": "~5.1.2",
+    "expo-router": "~5.1.3",
     "expo-share-intent": "^4.1.1",
-    "expo-splash-screen": "~0.30.9",
+    "expo-splash-screen": "~0.30.10",
     "expo-status-bar": "~2.2.3",
-    "expo-system-ui": "~5.0.9",
+    "expo-system-ui": "~5.0.10",
     "expo-web-browser": "~14.2.0",
     "htmlparser2": "^9.1.0",
     "jest-diff": "^29.7.0",
     "queue": "^7.0.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "react-native": "0.79.4",
+    "react-native": "0.79.5",
     "react-native-animated-spinkit": "^1.5.2",
     "react-native-blockstack": "https://gitpkg.now.sh/stxapps/blockstack-react-native/BlockstackSDK?3d5bcd6ea9a17f00c76be5913009f2c02f13b95f",
     "react-native-file-access": "^3.1.1",
@@ -67,7 +67,7 @@
     "@babel/core": "^7.25.2",
     "@types/react": "~19.0.10",
     "jest": "^29.2.1",
-    "jest-expo": "~53.0.8",
+    "jest-expo": "~53.0.9",
     "react-native-svg-transformer": "^1.5.1",
     "react-test-renderer": "19.0.0",
     "typescript": "~5.8.3"
