--- a/packages/expo/package.json
+++ b/packages/expo/package.json
@@ -4,6 +4,9 @@
   "version": "0.0.0",
   "scripts": {
     "patch-js": "node bin/patch.js",
+    "export-stacks-access-as-string": "node bin/export-stacks-access-as-string.js ../../../stacks-access-in-webview .",
+    "export-ckeditor-as-string": "node bin/export-ckeditor-as-string.js ../../../justnote-editor-in-webview/core-js/minified.js ../../../justnote-editor-in-webview/js/ckeditor.js ../../../justnote-editor-in-webview/css/tailwind.css ../../../justnote-editor-in-webview/css/ckeditor.css ../../../justnote-editor-in-webview/index.html ./ckeditor.js",
+    "export-jhfp-as-string": "node bin/export-jhfp-as-string.js ../../../justnote-html-for-pdf/css/tailwind.css ../../../justnote-html-for-pdf/css/ckeditor.css ../../../justnote-html-for-pdf/index.html ./jhfp.js",
     "prebuild": "npx expo prebuild --clean",
     "android": "npx expo run:android",
     "ios": "npx expo run:ios",
