--- a/packages/expo/package.json
+++ b/packages/expo/package.json
@@ -27,6 +27,7 @@
     "@wewatch/lexorank": "^1.0.3",
     "event-target-fallback": "^1.0.0",
     "expo": "53.0.17",
+    "expo-build-properties": "~0.14.8",
     "expo-dev-client": "~5.2.4",
     "expo-document-picker": "~13.1.6",
     "expo-font": "~13.3.1",
@@ -54,6 +55,7 @@
     "react-native-flag-secure": "^1.0.4",
     "react-native-keyboard-controller": "^1.17.5",
     "react-native-mmkv-storage": "0.4.4",
+    "react-native-navigation-mode": "^1.1.0",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
@@ -67,18 +69,17 @@
     "redux-devtools-expo-dev-plugin": "^2.0.0",
     "redux-thunk": "^3.1.0",
     "reselect": "^5.1.1",
-    "url-parse": "^1.5.10",
-    "expo-build-properties": "~0.14.8"
+    "url-parse": "^1.5.10"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/react": "~19.0.10",
+    "eslint": "^9.0.0",
+    "eslint-config-expo": "~9.2.0",
     "jest": "^29.2.1",
     "jest-expo": "~53.0.9",
     "react-native-svg-transformer": "^1.5.1",
     "react-test-renderer": "19.0.0",
-    "typescript": "~5.8.3",
-    "eslint": "^9.0.0",
-    "eslint-config-expo": "~9.2.0"
+    "typescript": "~5.8.3"
   }
 }
