--- a/packages/expo/package.json
+++ b/packages/expo/package.json
@@ -26,7 +26,7 @@
     "@react-navigation/native": "^7.1.6",
     "@wewatch/lexorank": "^1.0.3",
     "event-target-fallback": "^1.0.0",
-    "expo": "53.0.20",
+    "expo": "~53.0.23",
     "expo-build-properties": "~0.14.8",
     "expo-dev-client": "~5.2.4",
     "expo-document-picker": "~13.1.6",
@@ -35,20 +35,20 @@
     "expo-image-manipulator": "~13.1.7",
     "expo-linking": "~7.1.7",
     "expo-localization": "~16.1.6",
-    "expo-navigation-bar": "~4.2.7",
+    "expo-navigation-bar": "~4.2.8",
     "expo-print": "~14.1.4",
-    "expo-router": "~5.1.4",
+    "expo-router": "~5.1.7",
     "expo-share-intent": "^4.1.1",
     "expo-splash-screen": "~0.30.10",
     "expo-status-bar": "~2.2.3",
-    "expo-system-ui": "~5.0.10",
+    "expo-system-ui": "~5.0.11",
     "expo-web-browser": "~14.2.0",
     "htmlparser2": "^9.1.0",
     "jest-diff": "^29.7.0",
     "queue": "^7.0.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "react-native": "0.79.5",
+    "react-native": "0.79.6",
     "react-native-animated-spinkit": "^1.5.2",
     "react-native-blockstack": "https://gitpkg.now.sh/stxapps/blockstack-react-native/BlockstackSDK?3d5bcd6ea9a17f00c76be5913009f2c02f13b95f",
     "react-native-file-access": "^3.1.1",
@@ -78,7 +78,7 @@
     "eslint": "^9.0.0",
     "eslint-config-expo": "~9.2.0",
     "jest": "^29.2.1",
-    "jest-expo": "~53.0.9",
+    "jest-expo": "~53.0.10",
     "react-native-svg-transformer": "^1.5.1",
     "react-test-renderer": "19.0.0",
     "typescript": "~5.8.3"
